admission/ValidatingAdmissionPolicy/policies/no-token-secrets/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: serviceaccount-no-token-secrets
  annotations:
    security.kubeapt.io/displayName: 'No Token Secrets'
    security.kubeapt.io/description: Avoid explicit long-lived token Secrets on ServiceAccounts.
    security.kubeapt.io/resource: ServiceAccounts
    security.kubeapt.io/severity: "7"
    security.kubeapt.io/remediation: "Remove ServiceAccount secrets references; rely on projected tokens. Fields: secrets."
    policies.kolteq.com/validatingAdmissionPolicy: f6a72ed9-d64b-5e78-93ca-8d78ce3e4c83
  labels:
    check-serviceaccount-no-token-secrets.security.kolteq.com/audit: 'false-true'
    check-serviceaccount-no-token-secrets.security.kolteq.com/enforce: 'false-true'
    check-serviceaccount-no-token-secrets.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - serviceaccounts
  validations:
  - expression: |
      !has(object.secrets) || size(object.secrets) == 0
    message: |
      Avoid explicit long-lived token Secrets on ServiceAccounts.
